# tds_website

./: Cargo.toml  Dioxus.toml  index.html
.github/workflows/: deploy_pages.yaml
assets/: main.css  site.webmanifest  tailwind.css
src/: main.rs
